# otter

./: .gitignore  README.md  analyze_missclassification.py  conll_dataset_formatter.py  evaluate.py  evaluate_bi_compressed.py  evaluate_ce_compressed.py  evaluate_compressed.py  main_results.py  paper_latex_tables.py  pyproject.toml  requirements.txt  train.py  train_bi_compressed.py  train_bi_contrastive.py  train_compressed.py  train_contrastive.py  train_cross_compressed.py  train_cross_contrastive.py  train_cross_encoder.py
artifacts/: span_ratios.jsonl
configs/: bi_encoder.json  conll.json  cross_encoder_debug.json  finerweb_conll.json  finerweb_multi.json  finerweb_swa.json  finerweb_tha.json  pilener_conll.json  swa.json  tha.json  thai.json
scripts/: analyze_span_ratios.py  compute_span_ratios.py  create_experiment_grid.py  dataset_stats.py  evaluate_gliner.py  final_scores.py  linear_thai_baseline.py  paper_latex_tables.py  segment_any_text.py
src/: __init__.py  args.py  collator.py  config.py  evaluate_gliner.py  logger.py  loss.py  metrics.py  model.py  trainer.py
src/collator/: __init__.py  all_labels.py  all_labels_compressed.py  all_labels_contrastive.py  all_labels_cross_encoder.py  eval_collator_crossencoder_compressed.py  eval_collator_crossencoder_contrastive.py  in_batch.py  in_batch_compressed.py  in_batch_contrastive.py  in_batch_cross_encoder.py  masks.py  train_collator_crossencoder_compressed.py  train_collator_crossencoder_contrastive.py
src/model/: __init__.py  base.py  compressed_span_model.py  contrastive_cross_encoder.py  (+3 more)
